fix content width on IE 11

--- a/osmfoundation.less
+++ b/osmfoundation.less
@@ -297,6 +297,7 @@ header.nav-toggled div#mw-panel {
 
 main.mw-body {
     border: 0;
+    display: block;
     color: @text-color;
     max-width: 1000px;
     margin: auto;
